--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-chart": "0.0.1",
     "react-chartjs-2": "2.11.1",
     "react-dom": "17.0.1",
+    "react-particles-js": "^3.4.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.0",
     "uuid": "8.3.2"
